# DAT255

./: Background.md  Considerations.md  LICENSE  README.md  docker-compose.yml
DeepShip/: 1. deepship_3ch.ipynb  2. Inference.ipynb  3. Transformers.ipynb  README.md  rest.py
Experiments/: 1. Audio processing.ipynb  2. DeepShip.ipynb  3. DeepShip 3ch cqt.ipynb  4. DeepShip 6ch.ipynb  6. Resample noise.ipynb  8. deepship_3ch_qct_polar.ipynb  README.md
RestClient/: CMakeLists.txt  README.md  main.cpp  main.qml
RestClient/PostRequest/: CMakeLists.txt  post.cpp  post.h
dataset/: README.md
docker/: Dockerfile  Dockerfile.audio  Dockerfile.tf  README.md  run_jupyterlab.sh  run_rest.sh
